--- a/.travis.yml
+++ b/.travis.yml
@@ -8,15 +8,20 @@ branches:
 services:
   - docker
 
+addons:
+  apt:
+    packages:
+      - docker-ce
+      - w3m
+
 env:
   global:
     - IMAGE="alpine-composer""
     - IMAGE_NAME="${DOCKER_USER}/${IMAGE}"
 
 before_script:
-  - sudo apt-get -qq update
-  - sudo apt-get -qq upgrade -y
-  - docker login -u "${DOCKER_USER}" -p "${DOCKER_PASSWORD}"
+  - sudo sysctl -w net.ipv4.ip_forward=1 
+  - if [[ "${TRAVIS_BRANCH}" == "master" ]] && [[ "${TRAVIS_PULL_REQUEST}" == "false" ]]; then docker login -u "${DOCKER_USER}" -p "${DOCKER_PASSWORD}" ; fi
 
 script:
-  - bash ./build_changed.sh
+  - bash ./build-images.sh
